--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "knex": "^0.11.7",
     "moment": "^2.14.1",
